FB Publish Functionality
YAY. Posts to FB and requests all permissions without any conflicts.

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -8,4 +8,5 @@
 	<string name="logout">Signed out of Google Play Games</string>
 	<string name="login">Signed in to Google Play Games</string>
 	<string name="fblogout">Signed out of Facebook</string>
+	<string name="fbposted">Score posted to Facebook</string>
 </resources>
